examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/check_inl.st
// ERROR_AMBIGUOUS_SUM_TYPE
language core;

extend with #sum-types;


fn main(succeed : Bool) -> Nat+Bool {
  return inl(true)
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
